--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ gokins:
       name: test-job
       # 执行前是否需要确认
       ack: true
-      # 执行前确认的提示文字
+      # 执行前确认的提示文字，当 ack=true 时有效，默认提示为【是否确认部署？(y/N)：】
       ack-text: "此任务将部署生产环境，是否确认部署？(y/N)："
       params:
         - name: git_branch
